now fix colour of current active stream in dark mode

--- a/static/styles/dark_theme.css
+++ b/static/styles/dark_theme.css
@@ -633,6 +633,7 @@
         .topic-list .filter-topics,
         > .bottom_left_row {
             background-color: hsl(208, 31%, 24%);
+            color: hsl(202, 56%, 91%);
         }
     }
 
